tests/syntax_errors/sasha27_2.tl
-- test case 27.
-- Description : unexpected token.

-- Expected : '2'
require "ifj21" 
function function : string
end                       
function()                

